Make Buttons look nice, remove dark mode swtich because of bugs

--- a/style.css
+++ b/style.css
@@ -1,8 +1,38 @@
-.center {
-    display: block;
-    text-align: center;
+.nightowl-daylight {
+    background-color: #181818;
+    color: white;
 }
 
-image.skibidi-duo {
-    width: 50%;
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+img.skibidi-duo {
+    max-width: 60%;
+    height: auto;
+}
+
+button.skibidPurp {
+    background-color: #E39FF6;
+    color: #710193;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    margin-top: 5px;
+}
+
+button.skibidPurp:hover{
+    background: #B65FCF;
+  }
+  button.skibidPurp:active{
+    background: #e3bcee;
+  }
+
+.button-center {
+    text-align: center;
 }
